<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/layout_title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="177dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="33dp"
                android:layout_marginRight="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/find_view_img" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="23dp"
                android:layout_marginRight="15dp"
                android:text="@string/live_auth"
                android:textColor="#000000"
                android:textSize="15sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginTop="33dp"
                android:background="#F6F6F6" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="10dp"
                    android:src="@drawable/hint_left" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/wenxintishi"
                    android:textColor="#666666"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="10dp"
                    android:src="@drawable/hint_right" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/live_hint1"
                    android:textColor="#666666"
                    android:textSize="13sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/live_hint2"
                    android:textColor="#666666"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/live_hint3"
                    android:textColor="#666666"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/live_hint4"
                    android:textColor="#666666"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <Button
                    android:id="@+id/bt_login"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/login_btn"
                    android:text="@string/go_live"
                    android:textColor="@color/white"
                    android:textSize="18dp" />


                <TextView
                    android:id="@+id/jump_skip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    android:text="@string/tiaoguo"
                    android:textColor="#999999"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>