<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/layout_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#FDFCEC"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/warning_hint" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="@string/msg_warning_hint"
            android:textColor="#F86E21"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:singleLine="true"
            android:textSize="13sp" />

    </LinearLayout>


    <ImageView
        android:id="@+id/sms_image"
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="36dp"
        android:scaleType="fitXY"
        android:src="@drawable/add_msg_bg" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/msg_title"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/msg_remark"
        android:textColor="#666666"
        android:textSize="13sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="25dp">


        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/login_btn"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/jump_skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/tiaoguo"
            android:textColor="#999999"
            android:textSize="16sp" />


    </LinearLayout>

</LinearLayout>