<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_bg"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="18dp"
        android:src="@drawable/souress_img" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tijiaochenggong"
        android:textColor="#191F25"
        android:textSize="16sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/jinkuaishenhe"
        android:textColor="#56191F25"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="19dp"
        android:background="#08191F25" />


    <TextView
        android:id="@+id/guanbi"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:gravity="center"
        android:text="@string/guanbi"
        android:textColor="#3296FA"
        android:textSize="16sp" />

</LinearLayout>