<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_home_top" />


    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shouxinqixianshengyu"
            android:textColor="#666666"
            android:textSize="17sp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/left_button"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/login_btn"
            android:text="@string/chakanxiangqing"
            android:textColor="@color/white"
            android:textSize="18dp" />


        <Button
            android:id="@+id/right_button"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/login_btn"
            android:text="@string/shenqingzhanqi"
            android:textColor="@color/white"
            android:textSize="18dp" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/login_btn"
        android:text="@string/shuaxinyixia"
        android:textColor="@color/white"
        android:textSize="18dp" />

</LinearLayout>