<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    android:orientation="vertical">


    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        android:gravity="center"
        android:text="@string/order"
        android:textColor="#000000"
        android:textSize="18dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EBEBEB" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/bt_daiqueren"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/daiqueren"
                android:textColor="#3296FA"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/bt_daihuankuan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/daihuankuan"
                android:textColor="#A3A5A8"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/bt_yijieshu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/yijieshu"
                android:textColor="#A3A5A8"
                android:textSize="15sp" />

        </LinearLayout>

        <View
            android:id="@+id/animotion_view"
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:background="#3296FA" />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>