<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_title_bar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:gravity="center_vertical|right"
            android:hint="@string/email_hint"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#888888"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#DDDDDD" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="19dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:textColor="#FF3B30"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/message"
            android:textColor="#000000"
            android:textSize="15sp" />

    </LinearLayout>


    <EditText
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/message_hint"
        android:minHeight="50dp"
        android:textColor="@color/black"
        android:textColorHint="#888888"
        android:textSize="15sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#DDDDDD" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/image_recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/login_btn"
        android:text="@string/tijiao"
        android:textColor="@color/white"
        android:textSize="18dp" />


</LinearLayout>